[package]
name = "stratum-sniffer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
integration_tests_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main", features = ["sv1"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"